--- a/notebook/EDA_STUDENT_PERFORMANCE.ipynb
+++ b/notebook/EDA_STUDENT_PERFORMANCE.ipynb
@@ -9,6 +9,8 @@
       "outputs": [],
       "source": [
         "#source myenv/bin/activate\n",
+        "#python src/components/data_ingestion.py\n",
+        "\n",
         "\n",
         "\n",
         "import numpy as np\n",
